scrollbar now fixed

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -34,7 +34,7 @@
 
 .divContainer{
     // overflow-y: scroll;
-    height: 100%;
+    height: calc(100% - 84px);
     margin-top: 84px;
 }
 
